# Auto-Mouse-and-Keyboard

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RUST_REWRITE_PLAN.md  autopilot.spec  build.bat  main.py  pyproject.toml  readonly.json  requirements-dev.txt  requirements.txt  version.py
.agents/workflows/: commit.md
.github/workflows/: ci.yml
core/: action.py  app_paths.py  autosave.py  crash_handler.py  engine.py  engine_context.py  event_bus.py  execution_context.py  hotkey_manager.py  macro_templates.py  memory_manager.py  profiler.py  recorder.py  retry.py  scheduler.py  secure.py  smart_hints.py  trigger_manager.py  triggers.py  undo_commands.py  update_checker.py  win32_stealth.py
gui/: action_editor.py  action_tree_model.py  constants.py  coordinate_picker.py  help_content.py  help_dialog.py  image_capture.py  image_preview_widget.py  main_window.py  no_scroll_widgets.py  recording_panel.py  region_picker.py  run_summary_dialog.py  settings_dialog.py  styles.py  tray.py  trigger_dialog.py
gui/panels/: __init__.py  action_list_panel.py  execution_panel.py  log_panel.py  minimap_panel.py  multi_run_panel.py  playback_panel.py  properties_panel.py  variable_panel.py
modules/: __init__.py  flow_control.py  image.py  keyboard.py  mouse.py  pixel.py  screen.py  system.py
rust/: Cargo.toml
rust-app/: .cursorrules  .gitignore  CLAUDE.md  Cargo.toml  rust-toolchain.toml
rust-app/.cargo/: config.toml
rust-app/crates/amk-cli/: Cargo.toml
rust-app/crates/amk-cli/src/: main.rs
rust-app/crates/amk-domain/: Cargo.toml
rust-app/crates/amk-domain/src/: action.rs  context.rs  convert.rs  lib.rs
rust-app/crates/amk-gui/: Cargo.toml  build.rs
rust-app/crates/amk-gui/src/: app.rs  main.rs  theme.rs
rust-app/crates/amk-gui/src/panels/: action_editor.rs  action_tree.rs  coord_picker.rs  debugger.rs  execution_panel.rs  export.rs  help.rs  macro_list.rs  mod.rs  multi_run.rs  optimizer.rs  recording.rs  scheduler.rs  screenshot.rs  settings.rs  status_bar.rs  toolbar.rs  variable_inspector.rs
rust-app/crates/amk-platform/: Cargo.toml
rust-app/crates/amk-platform/src/: capture.rs  clipboard.rs  crypto.rs  hotkey.rs  input.rs  lib.rs  sleeper.rs  stealth.rs  vision.rs  win32_executor.rs  window.rs
rust-app/crates/amk-runtime/: Cargo.toml
rust-app/crates/amk-runtime/src/: engine.rs  executor.rs  lib.rs  report.rs
rust-app/crates/amk-runtime/tests/: integration.rs
rust-app/crates/amk-schema/: Cargo.toml
rust-app/crates/amk-schema/src/: lib.rs
rust/.cargo/: config.toml
rust/crates/amk-app/: Cargo.toml
rust/crates/amk-app/src/: lib.rs  main.rs
rust/crates/amk-domain/: Cargo.toml
rust/crates/amk-domain/src/: action.rs  context.rs  lib.rs
rust/crates/amk-platform-win/: Cargo.toml
rust/crates/amk-platform-win/src/: lib.rs
rust/crates/amk-runtime/: Cargo.toml
rust/crates/amk-runtime/src/: lib.rs
rust/crates/amk-schema/: Cargo.toml
rust/crates/amk-schema/src/: lib.rs
scripts/: bump_version.py  lint_conditional_imports.py  lint_getattr_typos.py  lint_memory_patterns.py  lint_resource_cleanup.py  lint_shortcut_conflicts.py  lint_signal_targets.py  lint_slots_check.py  lint_thread_safety.py  qa_check.py  test_complex_stress.py  test_deep_nested.py  test_gui_ux_impact.py  test_p0_stress.py
tests/: _audit_check.py  _stress_log.txt  _stress_results.txt  _test_output.txt  bench_perf.py  bench_quick.py  bench_stress.py  benchmark_audit.py  conftest.py  stress_test.py  test_action_tree_model.py  test_all.py  test_benchmarks.py  test_bugfix_v27.py  test_core_logic_deep.py  test_deep_coverage.py  test_e2e_flows.py  test_edge_cases_v2.py  test_event_bus.py  test_extended.py  test_gui_integration.py  test_gui_interaction.py  test_integration.py  test_integration_flows.py  test_integration_v2.py  test_kb_scenarios.py  test_lifecycle.py  test_macro_templates.py  test_mainwindow_slots.py  test_multi_run.py  test_negative_cases.py  test_panels.py  test_qa_audit_v110.py  test_retry_secure.py  test_smart_hints.py  test_smoke.py  test_speed_context.py  test_styles_coverage.py  test_targeted_qa_v26.py  test_thread_safety.py  (+3 more)
