[package]
name = "amk-cli"
description = "AutoMacro CLI runner — load, parse, and execute macro files"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "automacro"
path = "src/main.rs"

[dependencies]
amk-schema = { path = "../amk-schema" }
amk-domain = { path = "../amk-domain" }
amk-runtime = { path = "../amk-runtime" }
amk-platform = { path = "../amk-platform" }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
ctrlc = "3.4"
