[package]
name = "amk-domain"
description = "Typed action model and execution context for AutoMacro"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
amk-schema = { path = "../amk-schema" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
