[package]
name = "amk-gui"
description = "AutoMacro GUI — desktop interface for macro automation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[[bin]]
name = "automacro-gui"
path = "src/main.rs"

[dependencies]
amk-schema = { path = "../amk-schema" }
amk-domain = { path = "../amk-domain" }
amk-runtime = { path = "../amk-runtime" }
amk-platform = { path = "../amk-platform" }
anyhow = { workspace = true }
eframe = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.15"
chrono = "0.4"
arboard = "3"
