[package]
name = "amk-schema"
description = "JSON schema for AutoMacro macro/config/trigger files"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
